--- a/templates/main.html
+++ b/templates/main.html
@@ -29,12 +29,8 @@
 <main>
     <div class="sidebar_l">
 	    <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><button class="button_plate"><a href="#" class="nav-link text-uppercase font-weight-bold">File</a></button></li>
-            <li class="nav-item"><button class="button_plate"><a href="#" class="nav-link text-uppercase font-weight-bold">Download</a></button></li>
-            <li class="nav-item"><button class="button_plate"><a href="#" class="nav-link text-uppercase font-weight-bold">Download</a></button></li>
-            <li class="nav-item"><button class="button_plate"><a href="#" class="nav-link text-uppercase font-weight-bold">Download</a></button></li>
-            <li class="nav-item"><button class="button_plate"><a href="#" class="nav-link text-uppercase font-weight-bold">Download</a></button></li>
-            <li class="nav-item"><button class="button_plate"><a href="#" class="nav-link text-uppercase font-weight-bold">Download</a></button></li>
+            <h3 color="white">ASCII art</h3>
+            <li class="nav-item"><button class="button_plate"><a href="/ascii" class="nav-link text-uppercase font-weight-bold">Конвертировать</a></button></li>
         </ul>
 	</div>
     <div class="sidebar_r">
