--- a/templates/main.html
+++ b/templates/main.html
@@ -6,11 +6,11 @@
     <nav class="navbar navbar-expand-lg fixed-top py-3">
         <div class="margin_left">
             <div id="navbarSupportedContentUp" class="collapse navbar-collapse">
-                <form class="login_form" method="post">
+                <form method="post" action="/main">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <div class="input__wrapper">
-                           <input name="file" type="file" name="file" id="input__file" class="input input__file" multiple>
+                           <input type="file" name="file" id="input__file" class="input input__file" multiple>
                            <label for="input__file" class="button_plate">
                               <span class="input__file-button-text">Выберите файл</span>
                            </label>
@@ -29,8 +29,10 @@
 <main>
     <div class="sidebar_l">
 	    <ul class="navbar-nav ml-auto">
-            <h3 color="white">ASCII art</h3>
-            <li class="nav-item"><button class="button_plate"><a href="/ascii" class="nav-link text-uppercase font-weight-bold">Конвертировать</a></button></li>
+            <form action="/ascii" method="post">
+                <input type="number" step="1" name="font-size" id="font-size">
+                <button type="submit" class="button_plate">Конвертировать</button>
+            </form>
         </ul>
 	</div>
     <div class="sidebar_r">
