--- a/templates/main.html
+++ b/templates/main.html
@@ -6,18 +6,18 @@
     <nav class="navbar navbar-expand-lg fixed-top py-3">
         <div class="margin_left">
             <div id="navbarSupportedContentUp" class="collapse navbar-collapse">
-                <form method="post" action="/main">
+                <form class="login_form" method="post" enctype="multipart/form-data" action="/main" novalidate>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <div class="input__wrapper">
-                           <input type="file" name="file" id="input__file" class="input input__file" multiple>
+                           <input type="file" name="pw" id="input__file" class="input input__file" multiple>
                            <label for="input__file" class="button_plate">
                               <span class="input__file-button-text">Выберите файл</span>
                            </label>
                         </div>
                     </li>
                     <li>
-                        <button type="submit" class="button_plate">Открыть</button>
+                        <button type="submit" class="button_plate" name="submit">Открыть</button>
                     </li>
                     <li class="nav-item"><button class="button_plate"><a style="color: white" href="{{processed_image}}" download>Скачать</a></button></li>
                 </ul>
@@ -30,7 +30,7 @@
     <div class="sidebar_l">
 	    <ul class="navbar-nav ml-auto">
             <form action="/ascii" method="post">
-                <input type="number" step="1" name="font-size" id="font-size">
+                <input type="number" step="1" name="font-size" id="font-size" width="5%">
                 <button type="submit" class="button_plate">Конвертировать</button>
             </form>
         </ul>
