--- a/templates/unauthorized_base.html
+++ b/templates/unauthorized_base.html
@@ -11,6 +11,66 @@
       .carousel-inner{
         width: 50%;
         max-height: 30% !important;
+        margin-top: 10%;
+        margin-left: 45%;
+        border: 1px solid lightgray;
+        padding: 5px;
+      }
+      .carousel-control-prev {
+        margin-left: 40%;
+      }
+      .sidebar { position: absolute; margin-left: 5%; margin-top: 5%; z-index:10; }
+      .button_plate {
+          align-items: center;
+          appearance: none;
+          background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+          border: 0;
+          border-radius: 6px;
+          box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+          box-sizing: border-box;
+          text-decoration: none !important;
+          color: white;
+          cursor: pointer;
+          display: inline-flex;
+          font-family: "Raleway",monospace;
+          font-color: white;
+          height: 48px;
+          width: 160px;
+          margin-right: 1em;
+          margin-left: 1em;
+          justify-content: center;
+          line-height: 1;
+          list-style: none;
+          overflow: hidden;
+          padding-left: 16px;
+          padding-right: 16px;
+          position: relative;
+          text-align: left;
+          transition: box-shadow .15s,transform .15s;
+          user-select: none;
+          -webkit-user-select: none;
+          touch-action: manipulation;
+          white-space: nowrap;
+          will-change: box-shadow,transform;
+          font-size: 18px;
+        }
+
+      .button_plate:focus {
+        box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+      }
+
+      .button_plate:hover {
+        box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+        transform: translateY(-2px);
+      }
+
+      .button_plate:active {
+        box-shadow: #3c4fe0 0 3px 7px inset;
+        transform: translateY(2px);
+      }
+      .alert-custom{
+        background-color:#6089D5;
+        color:#fff;
       }
     </style>
     <title>PyArt</title>
