--- a/templates/unauthorized_base.html
+++ b/templates/unauthorized_base.html
@@ -72,6 +72,20 @@
         background-color:#6089D5;
         color:#fff;
       }
+      .reg_form {
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: auto;
+        margin-bottom: auto;
+        max-width: 40%;
+        background-color: #7019c2;
+        border: 1px solid gray;
+        border-radius: 5px;
+        padding: 10px;
+      }
+      p {
+        color: white;
+      }
     </style>
     <title>PyArt</title>
 </head>
