--- a/templates/register.html
+++ b/templates/register.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "unauthorized_base.html" %}
 
 {% block content %}
-<h1>Регистрация</h1>
-<form action="" method="post">
+<h1 style="color:white; text-align: center;">Регистрация</h1>
+<form action="" method="post" class="reg_form">
     {{ form.hidden_tag() }}
     <p>
         {{ form.email.label }}<br>
