--- a/templates/main.html
+++ b/templates/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="alert alert-dark" align="right">Python pixel art</h1>
+<h1 class="alert alert-dark" align="right">Python Art</h1>
 <header class="header">
     <nav class="navbar navbar-expand-lg fixed-top py-3">
         <div class="margin_left">
