--- a/templates/register.html
+++ b/templates/register.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 <h1 style="color:white; text-align: center;">Регистрация</h1>
+{% if message %}
+    <div style="position: absolute; margin-left:82%; margin-top:-3%;">
+        <div class="alert alert-danger" align="center">{{message}}</div>
+    </div>
+{% endif %}
 <form action="" method="post" class="reg_form">
     {{ form.hidden_tag() }}
     <p>
@@ -59,6 +64,5 @@
         {% endfor %}
     </p>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    {{message}}
 </form>
 {% endblock %}
