adding_filter_page is almost done

--- a/templates/adding_filter_page.html
+++ b/templates/adding_filter_page.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form action="" method="post" class="reg_form" novalidate>
+<form method="post" enctype="multipart/form-data" class="reg_form" novalidate>
     <p>
         {{ form.csrf_token }}
     <p>
