--- a/templates/filter_page.html
+++ b/templates/filter_page.html
@@ -4,8 +4,11 @@
 {% for filter in filters %}
 <ul class="hr">
     <li>
-        <div class="filter_log">
-            {{filter.name}}
+        <div>
+            <h1 align="center" style="color: white;">{{filter.name}}</h1>
+            <img src="static/img/filter_image_{{ filter.image }}.png">
+            <p>static/img/filter_image_{{ filter.image }}.png</p>
+            <h3 align="left" style="color: white;">{{filter.description}}</h3>
         </div>
     </li>
 </ul>
