--- a/templates/filter_base.html
+++ b/templates/filter_base.html
@@ -87,9 +87,9 @@
         color: white;
       }
       .hr {
-        background-color: black;
-        margin: 2% 5% 5% 5%;
-        width: 26%;
+        background-color: #7a29a3;
+        margin: 1% 1% 1% 1%;
+        width: 37%;
         padding: 4px;
         height: 90%;
         border-radius: 40px;
