--- a/templates/filter_page.html
+++ b/templates/filter_page.html
@@ -1,16 +1,19 @@
 {% extends "filter_base.html" %}
 
 {% block content %}
+<a href="/prev_page" class="button_plate" style="width:8%;"> < </a>
 {% for filter in filters %}
 <ul class="hr">
     <li>
         <div>
             <h1 align="center" style="color: white;">{{filter.name}}</h1>
-            <img src="static/img/filter_image_{{ filter.image }}.png">
+            <img align="center" style="border: 3px solid #1c0033;" src="static/img/filter_image_{{ filter.image }}.png">
             <p>static/img/filter_image_{{ filter.image }}.png</p>
             <h3 align="left" style="color: white;">{{filter.description}}</h3>
+            <a href="/main" class="button_plate">Try out!</a>
         </div>
     </li>
 </ul>
 {% endfor %}
+<a href="/next_page" class="button_plate" style="width:8%;"> > </a>
 {% endblock %}
