--- a/templates/filter_page.html
+++ b/templates/filter_page.html
@@ -7,10 +7,10 @@
     <li>
         <div>
             <h1 align="center" style="color: white;">{{filter.name}}</h1>
-            <img align="center" style="border: 3px solid #1c0033;" src="static/img/filter_image_{{ filter.image }}.png">
+            <img align="center" style="width: 100%; height: 60%;" style="border: 3px solid #1c0033;" src="static/img/filter_image_{{ filter.image }}.png">
             <p>static/img/filter_image_{{ filter.image }}.png</p>
             <h3 align="left" style="color: white;">{{filter.description}}</h3>
-            <a href="/main" class="button_plate">Try out!</a>
+            <a align="center" href="/go_main/{{filter.id}}" class="button_plate">Try out!</a>
         </div>
     </li>
 </ul>
