--- a/templates/filter_page.html
+++ b/templates/filter_page.html
@@ -1,6 +1,16 @@
 {% extends "filter_base.html" %}
 
 {% block content %}
+<h1 class="alert alert-custom  fade in alert-dismissable show" align="left">Python Art</h1>
+
+<nav class="navbar navbar-expand-lg fixed-top py-3">
+  <div style="position: absolute; margin-left: 60%; margin-top: 3%; z-index:10;">
+    <a href="/create_filter" class="button_plate">Создать фильтр</a>
+    <a href="/#" class="button_plate">Удалить фильтр</a>
+    <a href="/#" class="button_plate">Выйти</a>
+  </div>
+</nav>
+
 <a href="/prev_page" class="button_plate" style="width:8%;"> < </a>
 {% for filter in filters %}
 <ul class="hr">
@@ -8,7 +18,6 @@
         <div>
             <h1 align="center" style="color: white;">{{filter.name}}</h1>
             <img align="center" style="width: 100%; height: 60%;" style="border: 3px solid #1c0033;" src="static/img/filter_image_{{ filter.image }}.png">
-            <p>static/img/filter_image_{{ filter.image }}.png</p>
             <h3 align="left" style="color: white;">{{filter.description}}</h3>
             <a align="center" href="/go_main/{{filter.id}}" class="button_plate">Try out!</a>
         </div>
