--- a/templates/main.html
+++ b/templates/main.html
@@ -33,11 +33,11 @@
             <form action="/draw_image" method="post">
                 <ul class="navbar-nav ml-auto">
                     {% for field in fields %}
-                        <li style="align=center; color:white;">{{field[0]}}</li>
-                        <li class="nav-item"><input name="field{{field[1]}}"></li>
+                        <li style="margin-left:22%; color:white;"><p style="width:80%; align: center;">{{field[0]}}</p></li>
+                        <li style="margin-left:12%;"><input value="{{field[1]}}" style="width:80%;" name="field{{field[2]}}"></li>
                     {% endfor %}
                 </ul>
-                <button type="submit" class="button_plate">Конвертировать</button>
+                <button type="submit" class="button_plate" style=" width: 70%; margin-left:12%; margin-top: 15%" >Конвертировать</button>
             </form>
         </ul>
 	</div>
@@ -46,10 +46,10 @@
 	</div>
     <div class="content">
         {% if current_image != '' %}
-            <img src="{{processed_image}}" class="pr_img">
+            <img style="width:100%; height:80%;" src="{{processed_image}}" class="pr_img">
         {% endif %}
 	</div>
 
-
+<meta http-equiv="refresh">
 </main>
 {% endblock %}
