--- a/templates/main.html
+++ b/templates/main.html
@@ -6,29 +6,13 @@
     <nav class="navbar navbar-expand-lg fixed-top py-3">
         <div class="margin_left">
             <div id="navbarSupportedContentUp" class="collapse navbar-collapse">
-                <form class="login_form" method="post" enctype="multipart/form-data" action="/main" novalidate>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <div class="input__wrapper">
-                           <input type="file" name="pw" id="input__file" class="input input__file" multiple>
-                           <label for="input__file" class="button_plate">
-                              <span class="input__file-button-text">Выберите файл</span>
-                           </label>
-                        </div>
-                    </li>
-                    <li>
-                        <button type="submit" class="button_plate" name="submit">Открыть</button>
-                    </li>
-
-                </ul>
-                </form>
-                <button class="button_plate"><a style="color: white" href="{{processed_image}}" download>Скачать</a></button>
+                <button class="button_plate"><a href="/filter_log">⬅ На главную</a></button>
             </div>
         </div>
     </nav>
 </header>
 <main>
-    <div class="sidebar_l">
+    <div class="sidebar_r">
 	    <ul class="navbar-nav ml-auto">
             <form action="/draw_image" method="post">
                 <ul class="navbar-nav ml-auto">
@@ -38,15 +22,36 @@
                     {% endfor %}
                 </ul>
                 <button type="submit" class="button_plate" style=" width: 70%; margin-left:12%; margin-top: 15%" >Конвертировать</button>
+                {% if message %}
+                    <div style="width: 100%; margin-top:5%;">
+                        <div class="alert alert-danger" align="center">{{message}}</div>
+                    </div>
+                {% endif %}
             </form>
         </ul>
 	</div>
-    <div class="sidebar_r">
+    <div class="sidebar_l">
+        <form class="login_form" method="post" enctype="multipart/form-data" action="/main" novalidate>
+        <ul class="navbar-nav ml-auto">
+            <li>
+                <div style="margin-top: 3%;" class="input__wrapper">
+                   <input type="file" name="pw" id="input__file" class="input input__file" multiple>
+                   <label for="input__file" class="button_plate">
+                      <span class="input__file-button-text">Выберите файл</span>
+                   </label>
+                </div>
+            </li>
+            <li>
+                <button style="margin: 3% 3% 3% 15%;" type="submit" class="button_plate" name="submit">Открыть</button>
+            </li>
 
+        </ul>
+        </form>
+        <button style="margin: 0% 3% 3% 15%;" class="button_plate"><a style="color: white" href="{{processed_image}}" download>Скачать</a></button>
 	</div>
     <div class="content">
         {% if current_image != '' %}
-            <img style="width:100%; height:80%;" src="{{processed_image}}" class="pr_img">
+            <img style="margin: 1% 1% 1% 1%; width:98%; height:97%;" src="{{processed_image}}" class="pr_img">
         {% endif %}
 	</div>
 
