--- a/templates/filter_page.html
+++ b/templates/filter_page.html
@@ -6,7 +6,7 @@
 <nav class="navbar navbar-expand-lg fixed-top py-3">
   <div style="position: absolute; margin-left: 60%; margin-top: 3%; z-index:10;">
     <a href="/create_filter" class="button_plate">Создать фильтр</a>
-    <a href="/#" class="button_plate">Удалить фильтр</a>
+    <a href="/delete_filter" class="button_plate">Удалить фильтр</a>
     <a href="/logout" class="button_plate">Выйти</a>
   </div>
 </nav>
