--- a/templates/filter_base.html
+++ b/templates/filter_base.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <style>
       body {
-        background-image: url(static/img/filter_page_background.png);
+        background-image: url(static/img/img.png);;
       }
       .carousel-inner{
         width: 50%;
@@ -23,7 +23,7 @@
       .button_plate {
           align-items: center;
           appearance: none;
-          background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+          background-image: radial-gradient(100% 100% at 100% 0, #ac26b5 0, #2b003d 100%);
           border: 0;
           border-radius: 6px;
           box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
@@ -69,7 +69,7 @@
         transform: translateY(2px);
       }
       .alert-custom{
-        background-color:#6089D5;
+        background-color:#690c69;
         color:#fff;
       }
       .reg_form {
@@ -87,7 +87,7 @@
         color: white;
       }
       .hr {
-        background-color: #7a29a3;
+        background-color: #2b003d;
         margin: 1% 1% 1% 1%;
         width: 37%;
         padding: 4px;
@@ -103,7 +103,25 @@
       }
       html, body {
        height: 100%;
+       width: 100%;
       }
+      table
+        {
+            width: 100%;
+            margin: 2.5%;
+            border-collapse: collapse;
+            table-layout: fixed;
+        }
+
+        table td
+        {
+            width: 20%;
+        }
+
+        table td:first-child
+        {
+            width: 40%;
+        }
     </style>
     <title>PyArt</title>
 </head>
