--- a/templates/register.html
+++ b/templates/register.html
@@ -63,6 +63,6 @@
             </p>
         {% endfor %}
     </p>
-    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+    <p>{{ form.submit(type="submit", class="button_plate") }}</p>
 </form>
 {% endblock %}
