--- a/templates/delete_filter_page.html
+++ b/templates/delete_filter_page.html
@@ -2,14 +2,17 @@
 
 {% block content %}
 
-<form class="login_form" method="post" enctype="multipart/form-data" action="/main" novalidate>
-    <ul>
-    {% for filter in filters %}
-        <li style="background-color: #7019c2; width: 80%; height: 100px; border-radius:5px; margin-top:3%;">
-            <h3 style="color: white;">{{filter.name}}</h3>
-        </li>
-        <input type="checkbox" style="margin-left: 85%; margin-top: -5%; width:15%; height: 100px;">
+<form class="login_form" method="post" novalidate>
+    <table>
+    {% for i in range(number) %}
+        <tr>
+            <td style="margin:1% 1% 1% 1%; background-color: #7019c2; width: 75%; height: 100px; border-radius:5px;">
+                <h3 style="color: white;">{{filters[i].name}}</h3>
+            </td>
+            <td style="margin:1% 1% 1% 1%; width: 20%; height: 100px; border-radius:5px;"><input type="checkbox" name="cb{{i + 1}}" style="width:100%; height: 100px;"></td>
+        </tr>
     {% endfor %}
-    </ul>
+    </table>
+    <button style="margin: 0% 0% 0% 40%; height:80px; width:20%; font-size:26px;" type="submit" class="button_plate">Удалить</button>
 </form>
 {% endblock %}
