--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <title>PyArt</title>
 </head>
-<body style="background-image: url(static/img/img.png);">
+<body style="background-image: url(static/img/bg.png);">
     {% block content%}{% endblock %}
 </body>
 </html>
