--- a/templates/initial_page.html
+++ b/templates/initial_page.html
@@ -5,19 +5,19 @@
 
 <nav class="navbar navbar-expand-lg fixed-top py-3">
   <div style="position: absolute; margin-left: 70%; margin-top: 3%; z-index:10;">
-    <a href="/registration" class="button_plate">Register</a>
-    <a href="/login" class="button_plate">Login</a>
+    <a href="/registration" class="button_plate">Регистрация</a>
+    <a href="/login" class="button_plate">Вход</a>
   </div>
 </nav>
 
 <div class="sidebar">
-  <p style="color:white; text-shadow: 6px 6px 0px rgba(0,0,0,0.2); font-size: 500%;">Make your Art</p>
-  <p style="color:white; text-shadow: 6px 6px 0px rgba(0,0,0,0.2); font-size: 320%">Using simple python</p>
-  <p style="color:white; text-shadow: 6px 6px 0px rgba(0,0,0,0.2); font-size: 320%">technologies</p>
+  <p style="color:white; text-shadow: 6px 6px 0px rgba(0,0,0,0.2); font-size: 500%;">Создайте свое искусство,</p>
+  <p style="color:white; text-shadow: 6px 6px 0px rgba(0,0,0,0.2); font-size: 320%">используя технологии</p>
+  <p style="color:white; text-shadow: 6px 6px 0px rgba(0,0,0,0.2); font-size: 320%">языка python</p>
 </div>
 
-<div style="position: absolute; margin-left: 12%; margin-top: 30%; z-index:10;">
-  <a href="/registration" class="button_plate">Try in now!</a>
+<div style="position: absolute; margin-left: 12%; margin-top: 25%; z-index:10;">
+  <a href="/registration" class="button_plate">Попробовать!</a>
 </div>
 
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
