--- a/templates/adding_filter_page.html
+++ b/templates/adding_filter_page.html
@@ -24,4 +24,5 @@
         <p>
     {% endfor %}
 </form>
+<button style="margin-left:45%; margin-top: 3%" class="button_plate"><a style="color: white; text-decoration: none !important;" href="static/instructions/instruction.docx" download>Инструкция</a></button>
 {% endblock %}
